@@ -6,17 +6,21 @@ import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
+import static java.util.function.Function.identity;
+import static java.util.stream.Collectors.*;
+
 /**
  * Created by Nitin Chaurasia on 1/31/18 at 12:05 AM.
  */
-public class S1collectToListMap {
+public class S1collect_toList_toMap {
     public static void main(String[] args) {
         List<String> list = List.of("Pawan", "Chiranjeevi", "RaviTeja", "Venkatesh", "Nagarjuna");
         System.out.println(list);
 
         //Create a now list with actors having names longer than 9 characters
-        List<String> l = list.stream().filter(str -> str.length() >= 9)
-                .collect(Collectors.toList());
+        List<String> l = list.stream()
+                .filter(str -> str.length() >= 9)
+                .toList();
         //System.out.println(l);
 
         //Defining boolean predicate to test if the string is shorter than 9 characters
@@ -24,22 +28,19 @@ public class S1collectToListMap {
         //Create another list of short characters
         List<String> l1 = list.stream()
                 .filter(strShort)
-                .collect(Collectors.toList());
+                .toList();
         //System.out.println(l1);
 
+        /* MAP */
         //Change all the names to uppercase
         // Using a function as a return value is expected
-        Function<String, String> upperCase = (str) -> str.toUpperCase();
-        List<String> l2 = list.stream()
-                .map(upperCase)
-                .collect(Collectors.toList());
-        //System.out.println(l2);
 
         Map<String, Integer> map = list.stream()
-                .collect(Collectors.toMap(Function.identity(), String::length));
+                .collect(Collectors.toMap(identity(), String::length));
+        System.out.println(map);
 
-        map.forEach((key, value) -> System.out.println(key + value));
-        //System.out.println(map);
-
+        Map<Integer, List<String>> collect = list.stream()
+                .collect(groupingBy(str -> str.length(), mapping(str->str.toUpperCase(),toList())));
+        System.out.println(collect);
     }
 }
